[package]
name = "scheduling_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
log = "0.4.14"
yaml-rust = "0.4.5"
chrono = "0.4"
num-integer = "0.1"
serde = "1.0.163"
serde_yaml = "0.9.21"
serde_derive = "1.0.163"
getset = "0.1.2"
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.8.5"
rayon = "1.8.1"
